Lesson 6 final commit

--- a/photos.htm
+++ b/photos.htm
@@ -3,8 +3,7 @@
 <head>
    <!--
     Program Name:  Photo Gallery Application
-    Author: 
-    Date:   
+    Author:  Nathalie Haas
     Filename: photos.htm
    -->
    <meta charset="utf-8" />
